build_error.log
WARNING: `@anchor-lang/core` version(^1.0.1) and the current CLI version(1.0.0) don't match.

	This can lead to unwanted behavior. To fix, upgrade the package by running:

	pnpm update @anchor-lang/core@1.0.0

   Compiling privyfi v0.1.0 (/Users/mrblackghost/Documents/practice/privy/privyfi/programs/privyfi)
error[E0412]: cannot find type `SystemProgram` in this scope
  --> programs/privyfi/src/instructions/update_yields.rs:33:40
   |
33 |     pub system_program: Program<'info, SystemProgram>,
   |                                        ^^^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
22 | pub struct InitializeYieldStore<'info, SystemProgram> {
   |                                      +++++++++++++++

warning: unused import: `user_position`
 --> programs/privyfi/src/instructions/withdraw.rs:7:13
  |
7 | use crate::{user_position, PrivyFiError};
  |             ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `anchor_lang::solana_program::system_program::ID as SYSTEM_PROGRAM_ID`
 --> programs/privyfi/src/instructions/update_yields.rs:2:5
  |
2 | use anchor_lang::solana_program::system_program::ID as SYSTEM_PROGRAM_ID;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: ambiguous glob re-exports
  --> programs/privyfi/src/lib.rs:8:9
   |
8  | pub use instructions::*;
   |         ^^^^^^^^^^^^^^^ the name `initialize_faucet` in the value namespace is first re-exported here
...
13 | #[program]
   | ---------- but the name `initialize_faucet` in the value namespace is also re-exported here
   |
   = note: `#[warn(ambiguous_glob_reexports)]` on by default

warning: ambiguous glob re-exports
  --> programs/privyfi/src/lib.rs:8:9
   |
8  | pub use instructions::*;
   |         ^^^^^^^^^^^^^^^ the name `request_faucet` in the value namespace is first re-exported here
...
13 | #[program]
   | ---------- but the name `request_faucet` in the value namespace is also re-exported here

For more information about this error, try `rustc --explain E0412`.
warning: `privyfi` (lib) generated 4 warnings
error: could not compile `privyfi` (lib) due to 1 previous error; 4 warnings emitted
